--- a/lesson3/lesson3_2.ipynb
+++ b/lesson3/lesson3_2.ipynb
@@ -89,6 +89,42 @@
     "n *= 10\n",
     "print(n)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97bab0dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###請以(複合指定運算子)設計程式,讓用者輸入三個任意數，程式會顯示3數相加的總和(float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6623c570",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "三數總和為:106.6\n"
+     ]
+    }
+   ],
+   "source": [
+    "total = 0.0\n",
+    "n = float(input(\"請輸入第一個數:\"))\n",
+    "total += n\n",
+    "n = float(input(\"請輸入第二個數:\"))\n",
+    "total += n\n",
+    "n = float(input(\"請輸入第三個數:\"))\n",
+    "total += n\n",
+    "\n",
+    "print(f\"三數總和為:{total}\")"
+   ]
   }
  ],
  "metadata": {
