統計 標準差

--- a/lesson4/lesson4_1.ipynb
+++ b/lesson4/lesson4_1.ipynb
@@ -38,6 +38,72 @@
     "print(\"徑度\", radians)\n",
     "print(\"角度\", round(degree,ndigits=2))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1662ed8",
+   "metadata": {},
+   "source": [
+    "tuple ###(暫時把一組數值包起來用逗號隔開)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "54a23910",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(56, 79, 68)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "56, 79, 68"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a7a78e8",
+   "metadata": {},
+   "source": [
+    "### 大學的統計,標準差"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6d21abb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33.0 36.0 39.0\n",
+      "平均:36.00\n",
+      "標準差:3.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "import statistics\n",
+    "\n",
+    "n1 = float(input(\"請輸入第1個數:\"))\n",
+    "n2 = float(input(\"請輸入第2個數:\"))\n",
+    "n3 = float(input(\"請輸入第3個數:\"))\n",
+    "average = statistics.mean((n1, n2, n3))\n",
+    "std = statistics.stdev((n1, n2, n3))\n",
+    "print(n1, n2, n3)\n",
+    "print(f\"平均:{average:.2f}\")\n",
+    "print(f\"標準差:{std:.2f}\")\n"
+   ]
   }
  ],
  "metadata": {
