--- a/lesson4/lesson4_2.ipynb
+++ b/lesson4/lesson4_2.ipynb
@@ -61,6 +61,52 @@
     "        print(\"這是雙項選擇\")\n",
     "        print(\"這是false的程式選擇\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "dc32c8e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5 > 3\n",
+    "20 == 20\n",
+    "20 != 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8f12d826",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "成年\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = int(input(\"請輸入age\"))\n",
+    "if age < 18:\n",
+    "        print(\"未成年\")\n",
+    "else:\n",
+    "        print(\"成年\")\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
