--- a/lesson4/lesson4_2.ipynb
+++ b/lesson4/lesson4_2.ipynb
@@ -107,6 +107,38 @@
     "        print(\"成年\")\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bcbaf1b",
+   "metadata": {},
+   "source": [
+    "- 學生總分為300\n",
+    "- 有些學生可以加分5%"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "9cd6cc74",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "學生分數是:262\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores = int(input(\"請輸入學生分數(最高300分):\"))\n",
+    "is_add = input(\"學生是否符合加分條件?(y,n)\")\n",
+    "if (is_add == \"y\"):\n",
+    "    scores *= 1.05\n",
+    "    \n",
+    "print(f\"學生分數是:{round(scores)}\")\n"
+   ]
   }
  ],
  "metadata": {
