--- a/lesson4/lesson4_2.ipynb
+++ b/lesson4/lesson4_2.ipynb
@@ -114,12 +114,13 @@
    "metadata": {},
    "source": [
     "- 學生總分為300\n",
-    "- 有些學生可以加分5%"
+    "- 有些學生可以加分5%\n",
+    "- 如果加分超過300,就已300為準"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "9cd6cc74",
    "metadata": {},
    "outputs": [
@@ -127,7 +128,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "學生分數是:262\n"
+      "學生分數是:300\n"
      ]
     }
    ],
@@ -136,7 +137,9 @@
     "is_add = input(\"學生是否符合加分條件?(y,n)\")\n",
     "if (is_add == \"y\"):\n",
     "    scores *= 1.05\n",
-    "    \n",
+    "    if scores > 300:\n",
+    "        scores = 300\n",
+    "\n",
     "print(f\"學生分數是:{round(scores)}\")\n"
    ]
   }
