--- a/lesson4/lesson4_2.ipynb
+++ b/lesson4/lesson4_2.ipynb
@@ -233,6 +233,44 @@
     "\n",
     "print(\"程式結束\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "505c84c2",
+   "metadata": {},
+   "source": [
+    "**分數輸入格是錯誤 20a**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "63f5ded0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "發生不知名的錯誤\n",
+      "應用程式結束\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    scores = int(input(\"請輸入學生分數(最高300分):\"))\n",
+    "    is_add = input(\"學生是否符合加分條件?(y,n)\")\n",
+    "    if (is_add == \"y\"):\n",
+    "        scores *= 1.05\n",
+    "        if scores > 300:\n",
+    "            scores = 300\n",
+    "\n",
+    "    print(f\"學生分數是:{round(scores)}\")\n",
+    "except:\n",
+    "    print(\"發生不知名的錯誤\")\n",
+    "print(\"應用程式結束\")\n"
+   ]
   }
  ],
  "metadata": {
