--- a/lesson4/lesson4_2.ipynb
+++ b/lesson4/lesson4_2.ipynb
@@ -271,6 +271,31 @@
     "    print(\"發生不知名的錯誤\")\n",
     "print(\"應用程式結束\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "57c433ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "輸入錯誤：請輸入有效的數值\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    num = int(input(\"請輸入一個數值：\"))\n",
+    "    if num % 2 == 0:\n",
+    "        print(\"這是偶數\")\n",
+    "    else:\n",
+    "        print(\"這是奇數\")\n",
+    "except ValueError:\n",
+    "    print(\"輸入錯誤：請輸入有效的數值\")"
+   ]
   }
  ],
  "metadata": {
