--- a/lesson5/lesson5_1.ipynb
+++ b/lesson5/lesson5_1.ipynb
@@ -41,6 +41,34 @@
     "    else:\n",
     "        print(\"人\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f40717ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "學生等級:不及格\n"
+     ]
+    }
+   ],
+   "source": [
+    "score:int = int(input(\"請輸入學生分數:\"))\n",
+    "if score >= 80:\n",
+    "    grade:str = '優'\n",
+    "else:\n",
+    "    #小於80\n",
+    "    if score >= 60:\n",
+    "        #小於80同時大於等於60\n",
+    "        grade:str = '及格'\n",
+    "    else:\n",
+    "        grade:str = '不及格'\n",
+    "print(f\"學生等級:{grade}\")\n"
+   ]
   }
  ],
  "metadata": {
