兩個if 改用elif 多項選擇

--- a/lesson5/lesson5_1.ipynb
+++ b/lesson5/lesson5_1.ipynb
@@ -69,6 +69,39 @@
     "        grade:str = '不及格'\n",
     "print(f\"學生等級:{grade}\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf9e633a",
+   "metadata": {},
+   "source": [
+    "### 多項選擇"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3d235431",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "學生等級:不及格\n"
+     ]
+    }
+   ],
+   "source": [
+    "score:int = int(input(\"請輸入學生分數:\"))\n",
+    "if score >= 80:\n",
+    "    grade:str = '優'\n",
+    "elif score >= 60:\n",
+    "    grade:str = '及格'\n",
+    "else:\n",
+    "    grade:str = '不及格'\n",
+    "print(f\"學生等級:{grade}\")"
+   ]
   }
  ],
  "metadata": {
