--- a/lesson5/lesson5_1.ipynb
+++ b/lesson5/lesson5_1.ipynb
@@ -102,6 +102,48 @@
     "    grade:str = '不及格'\n",
     "print(f\"學生等級:{grade}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54614d28",
+   "metadata": {},
+   "source": [
+    "- 90(含)~100分為'優'\n",
+    "- 80(含)~89分為'甲'\n",
+    "- 70(含)~79分為'乙'\n",
+    "- 60(含)~69分為'丙'\n",
+    "- 0(含)~59分為'丁'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8e366e23",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "學生等級:丁\n"
+     ]
+    }
+   ],
+   "source": [
+    "score:int = int(input(\"請輸入學生分數:\"))\n",
+    "if score >= 90:\n",
+    "    grade:str = '優'\n",
+    "elif score >= 80:\n",
+    "    grade:str = '甲'\n",
+    "elif score >= 70:\n",
+    "    grade:str = '乙'\n",
+    "elif score >= 60:\n",
+    "    grade:str = '丙'\n",
+    "else:\n",
+    "    grade:str = '丁'\n",
+    "\n",
+    "print(f\"學生等級:{grade}\")"
+   ]
   }
  ],
  "metadata": {
