--- a/lesson5/lesson5_1.ipynb
+++ b/lesson5/lesson5_1.ipynb
@@ -144,6 +144,53 @@
     "\n",
     "print(f\"學生等級:{grade}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9143d8f6",
+   "metadata": {},
+   "source": [
+    "### 輸入顧客購買金額,若金額在\n",
+    "\n",
+    "    - 100000元打8折.\n",
+    "    - 50000元打85折.\n",
+    "    - 30000元打9折.\n",
+    "    - 10000元打95折.\n",
+    "\n",
+    "    請輸入購買金額:130000\n",
+    "\n",
+    "    實付金額是: 104000.0元"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2bd1a7fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "實付金額:31500.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "money:int = int(input(\"請輸入購買金額:\"))\n",
+    "if money < 10000:\n",
+    "    pay_money:int = money\n",
+    "elif money < 30000:\n",
+    "    pay_money:int = money * 0.95\n",
+    "elif money < 50000:\n",
+    "    pay_money:int = money * 0.9\n",
+    "elif money < 100000:\n",
+    "    pay_money:int = money * 0.85\n",
+    "else:\n",
+    "    pay_money:int = money * 0.8\n",
+    "\n",
+    "print(f\"實付金額:{pay_money}\")"
+   ]
   }
  ],
  "metadata": {
