--- a/lesson5/lesson5_1.ipynb
+++ b/lesson5/lesson5_1.ipynb
@@ -191,6 +191,45 @@
     "\n",
     "print(f\"實付金額:{pay_money}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d565d4df",
+   "metadata": {},
+   "source": [
+    "### 巢狀判斷"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "4eb7169b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "獎金:500\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 國文100分同時數學100分,獎金1000元\n",
+    "# 只有一科100分,獎金500元\n",
+    "chinese = int(input(\"請輸入國文分數\"))\n",
+    "math = int(input(\"請輸入數學分數\"))\n",
+    "#巢狀判斷\n",
+    "bonus = 0\n",
+    "if chinese == 100:\n",
+    "    if math == 100:\n",
+    "        bonus = 1000\n",
+    "    else:\n",
+    "        bonus = 500\n",
+    "elif math == 100:\n",
+    "    bonus = 500\n",
+    "print(f\"獎金:{bonus}\")\n"
+   ]
   }
  ],
  "metadata": {
