--- a/lesson5/lesson5_2.ipynb
+++ b/lesson5/lesson5_2.ipynb
@@ -89,6 +89,68 @@
     "for ele in range(1, 11, 2):\n",
     "    print(ele)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "688eae62",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#1~10的總數和\n",
+    "total = 0\n",
+    "total += 1\n",
+    "total += 2\n",
+    "total += 3\n",
+    "total += 4\n",
+    "total += 5\n",
+    "total += 6\n",
+    "total += 7\n",
+    "total += 8\n",
+    "total += 9\n",
+    "total += 10\n",
+    "total \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f619b6e",
+   "metadata": {},
+   "source": [
+    "### 如果明確知道執行的次數,請使用for in 迴圈"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8d36bf2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5050\n"
+     ]
+    }
+   ],
+   "source": [
+    "total = 0\n",
+    "for i in range(1, 101): #for i in 迴圈 執行100次\n",
+    "    total += i\n",
+    "print(total)"
+   ]
   }
  ],
  "metadata": {
