--- a/lesson5/lesson5_2.ipynb
+++ b/lesson5/lesson5_2.ipynb
@@ -151,6 +151,64 @@
     "    total += i\n",
     "print(total)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5492ab6",
+   "metadata": {},
+   "source": [
+    "### _ 省略運算子"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "452120b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "很重要\n",
+      "很重要\n",
+      "很重要\n"
+     ]
+    }
+   ],
+   "source": [
+    "for _ in range(3):\n",
+    "    print(\"很重要\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d633ba14",
+   "metadata": {},
+   "source": [
+    "### 字串,就是Sequence(資料)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "0cfaf00b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "很\n",
+      "重\n",
+      "要\n"
+     ]
+    }
+   ],
+   "source": [
+    "for word in '很重要':\n",
+    "    print(word)"
+   ]
   }
  ],
  "metadata": {
