--- a/lesson5/lesson5_2.ipynb
+++ b/lesson5/lesson5_2.ipynb
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "0cfaf00b",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
     }
    ],
    "source": [
-    "for word in '很重要':\n",
+    "for word in '很重要': #一個字執行1次,這裡是3次\n",
     "    print(word)"
    ]
   }
