--- a/lesson6/lesson6_2.ipynb
+++ b/lesson6/lesson6_2.ipynb
@@ -66,6 +66,50 @@
     "    \n",
     "print(f\"恭喜!已經存夠了,存了{month}月,共存了{deposit}元\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "391b6f69",
+   "metadata": {},
+   "source": [
+    "- 奇數輸出平方\n",
+    "- 偶數不要做任何動作\n",
+    "-'q'要離開"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "aead2deb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "應用程式結束\n"
+     ]
+    }
+   ],
+   "source": [
+    "while(True):\n",
+    "    value = input('請輸入整數,輸入[q]離開')\n",
+    "    if value == 'q':\n",
+    "        break\n",
+    "\n",
+    "    try:\n",
+    "        value = int(value) #變整數蓋掉自己\n",
+    "    except:\n",
+    "        print(\"輸入錯誤,請重新輸入\")\n",
+    "        continue\n",
+    "    \n",
+    "    if (value % 2 == 1):\n",
+    "        print(f\"{value}的平方是{value**2}\")\n",
+    "    #else:\n",
+    "    #   continue 這2行可省略不寫,因為上面有一個continue\n",
+    "\n",
+    "print(\"應用程式結束\")\n"
+   ]
   }
  ],
  "metadata": {
