建立亂數 random.randint(a, b)

--- a/lesson6/lesson6_2.ipynb
+++ b/lesson6/lesson6_2.ipynb
@@ -110,6 +110,37 @@
     "\n",
     "print(\"應用程式結束\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c3f1673",
+   "metadata": {},
+   "source": [
+    "### 建立亂數 random.randint(a, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "cd689f97",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "78"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random\n",
+    "rand_num = random.randint(1, 100)\n",
+    "rand_num"
+   ]
   }
  ],
  "metadata": {
