--- a/lesson6/lesson6_3.ipynb
+++ b/lesson6/lesson6_3.ipynb
@@ -21,14 +21,19 @@
       "=====猜數字遊戲=====\n",
       "\n",
       "\n",
-      "31\n",
       "再大一點\n",
-      "猜數字的遊戲結束\n",
+      "您已經猜了:1\n",
       "再小一點\n",
       "您已經猜了:2\n",
-      "猜數字的遊戲結束\n",
+      "再小一點\n",
+      "您已經猜了:3\n",
+      "再大一點\n",
+      "您已經猜了:4\n",
+      "再小一點\n",
+      "您已經猜了:5\n",
       "賓果!猜對了, 答案是(target)\n",
-      "您猜了3次\n"
+      "您猜了6次\n",
+      "猜數字的遊戲結束\n"
      ]
     }
    ],
@@ -45,7 +50,7 @@
     "    count += 1\n",
     "    if(keyin >= min and keyin <= max):\n",
     "        if(keyin == target):\n",
-    "            print(f\"賓果!猜對了, 答案是(target)\")\n",
+    "            print(f\"賓果!猜對了, 答案是:(target)\")\n",
     "            print(f\"您猜了{count}次\")\n",
     "            break\n",
     "        elif keyin < target:\n",
@@ -54,7 +59,7 @@
     "        elif keyin > target:\n",
     "            print(\"再小一點\")\n",
     "            max = keyin - 1\n",
-    "        print(f\"您已經猜了:{count}\")\n",
+    "        print(f\"您已經猜了:{count}次\")\n",
     "    else:\n",
     "        print(\"請輸入提示範圍內的數字\")\n",
     "    \n",
