--- a/lesson6/lesson6_3.ipynb
+++ b/lesson6/lesson6_3.ipynb
@@ -65,6 +65,52 @@
     "    \n",
     "print(\"猜數字的遊戲結束\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c15bb834",
+   "metadata": {},
+   "source": [
+    "### BMI 計算"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3c7a0584",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "您的 BMI 值為:21.22\n",
+      "體重正常\n"
+     ]
+    }
+   ],
+   "source": [
+    "#輸入身高與體重\n",
+    "height = float(input(\"請輸入身高(公尺):\"))\n",
+    "weight = float(input(\"請輸入體重(公斤):\"))\n",
+    "#計算BMI\n",
+    "bmi = weight / (height ** 2)\n",
+    "#顯示 BMI 數值\n",
+    "print(f\"您的 BMI 值為:{bmi:.2f}\")\n",
+    "#判斷 BMI 所屬範圍\n",
+    "if bmi < 18.5:\n",
+    "    print(\"體重過輕\")\n",
+    "elif bmi < 24:\n",
+    "    print(\"體重正常\")\n",
+    "elif bmi < 27:\n",
+    "    print(\"體重過重\")\n",
+    "elif bmi < 30:\n",
+    "    print(\"輕度肥胖\")\n",
+    "elif bmi < 35:\n",
+    "    print(\"中度肥胖\")\n",
+    "else:\n",
+    "    print(\"重度肥胖\")\n"
+   ]
   }
  ],
  "metadata": {
