--- a/lesson6/lesson6_3.ipynb
+++ b/lesson6/lesson6_3.ipynb
@@ -111,6 +111,41 @@
     "else:\n",
     "    print(\"重度肥胖\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c84fb82c",
+   "metadata": {},
+   "source": [
+    "### 求公因數"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "14b8723b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "請輸入2個整數,求2個數的公因數:\n",
+      "12和18的公因數有:  1  2  3  6  "
+     ]
+    }
+   ],
+   "source": [
+    "#輸入數值\n",
+    "print(\"請輸入2個整數,求2個數的公因數:\")\n",
+    "num1 = int(input(\"請輸入第1個數值:\"))\n",
+    "num2 = int(input(\"請輸入第2個數值:\"))\n",
+    "#求公因數\n",
+    "print(f\"{num1}和{num2}的公因數有:\",end='  ')\n",
+    "for i in range(1, min(num1, num2) + 1):\n",
+    "    if num1 % i == 0 and num2 % i ==0:\n",
+    "        print(i,end='  ')"
+   ]
   }
  ],
  "metadata": {
