--- a/lesson8/lesson8_1.ipynb
+++ b/lesson8/lesson8_1.ipynb
@@ -26,7 +26,7 @@
    "id": "8907f0d7",
    "metadata": {},
    "source": [
-    "### 引述值的呼叫(依照參數的順序)"
+    "### 引數值的呼叫(依照參數的順序)"
    ]
   },
   {
@@ -47,6 +47,38 @@
    ],
    "source": [
     "menu('白酒','雞排','蛋糕')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6d213dd",
+   "metadata": {},
+   "source": [
+    "### 引數名稱的呼叫(可以不依照順序)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b748c7ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "前菜:白酒\n",
+      "主菜:雞排\n",
+      "甜點:蛋糕\n",
+      "前菜:白酒\n",
+      "主菜:雞排\n",
+      "甜點:蛋糕\n"
+     ]
+    }
+   ],
+   "source": [
+    "menu(wine='白酒',entree='雞排',dessert='蛋糕')\n",
+    "menu(wine='白酒',dessert='蛋糕',entree='雞排')"
    ]
   }
  ],
