--- a/lesson8/lesson8_1.ipynb
+++ b/lesson8/lesson8_1.ipynb
@@ -80,6 +80,41 @@
     "menu(wine='白酒',entree='雞排',dessert='蛋糕')\n",
     "menu(wine='白酒',dessert='蛋糕',entree='雞排')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe470ecd",
+   "metadata": {},
+   "source": [
+    "### 混和呼叫\n",
+    "- 前面要引數值呼叫\n",
+    "- 後面要引數名稱的呼叫\n",
+    "- 引數名稱呼叫後,就全部要使用引數名稱"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "69f9bd7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "前菜:白酒\n",
+      "主菜:雞排\n",
+      "甜點:蛋糕\n",
+      "前菜:白酒\n",
+      "主菜:雞排\n",
+      "甜點:蛋糕\n"
+     ]
+    }
+   ],
+   "source": [
+    "menu('白酒',entree='雞排',dessert='蛋糕')\n",
+    "menu('白酒',dessert='蛋糕',entree='雞排')"
+   ]
   }
  ],
  "metadata": {
