--- a/lesson8/lesson8_1.ipynb
+++ b/lesson8/lesson8_1.ipynb
@@ -178,6 +178,81 @@
    "source": [
     "menu('白酒',dessert='蛋糕',entree='雞排')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e6678639",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 'a', 'b', 'c')\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_args(*args):\n",
+    "    print(args)\n",
+    "\n",
+    "print_args(1, 2, 3, 'a', 'b', 'c')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86a9a0a4",
+   "metadata": {},
+   "source": [
+    "### variable-length 沒有限定數量引數名稱呼叫"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a53d5dba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'one': 1, 'two': 2, 'three': 3, 'four': 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_args(**kwargs):\n",
+    " \n",
+    "    print(kwargs)\n",
+    "\n",
+    "\n",
+    "print_args(one=1, two=2, three=3, four=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "5659b262",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 'a', 'b', 'c')\n",
+      "{'one': 1, 'two': 2, 'three': 3, 'four': 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_all(*args,**kwargs):\n",
+    "    print(args)\n",
+    "    print(kwargs)\n",
+    "\n",
+    "print_all(1, 2, 3, 'a', 'b', 'c', one=1, two=2, three=3, four=4)"
+   ]
   }
  ],
  "metadata": {
