--- a/lesson8/lesson8_1.ipynb
+++ b/lesson8/lesson8_1.ipynb
@@ -253,6 +253,30 @@
     "\n",
     "print_all(1, 2, 3, 'a', 'b', 'c', one=1, two=2, three=3, four=4)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "35e110d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5\n",
+      "\n",
+      "1-2-3-4-5\n",
+      "1-2-3-4-5.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(1, 2, 3, 4, 5)\n",
+    "print()\n",
+    "print(1, 2, 3, 4, 5,sep='-')\n",
+    "print(1, 2, 3, 4, 5,end='.\\n',sep='-')"
+   ]
   }
  ],
  "metadata": {
