--- a/lesson8/lesson8_2.ipynb
+++ b/lesson8/lesson8_2.ipynb
@@ -26,7 +26,7 @@
    "id": "6a8fce73",
    "metadata": {},
    "source": [
-    "### 一組有關係的資料(dictionary)"
+    "### 一組有關係的資料(dictionary) - 又稱map資料類型"
    ]
   },
   {
