--- a/lesson8/lesson8_4.ipynb
+++ b/lesson8/lesson8_4.ipynb
@@ -36,6 +36,59 @@
     "#取出奇數值\n",
     "list(filter(is_odd, numbers))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "4942b7aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 5, 7, 9]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numbers:list[int] = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "\n",
+    "def is_odd(n): #自訂義function\n",
+    "    return n % 2 == 1\n",
+    " \n",
+    "#取出奇數值\n",
+    "list(filter(is_odd, numbers))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8f99352b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 5, 7, 9]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numbers:list[int] = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "\n",
+    " \n",
+    "#取出奇數值\n",
+    "#匿名的function --> 只能寫一行 它會自動return\n",
+    "list(filter(lambda n:n % 2 == 1, numbers))"
+   ]
   }
  ],
  "metadata": {
