--- a/lesson9/lesson9_3.ipynb
+++ b/lesson9/lesson9_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "f33541ba",
    "metadata": {},
    "outputs": [],
@@ -11,29 +11,70 @@
     "\n",
     "@dataclass\n",
     "class Student: #class 建立第1個字母習慣用大寫\n",
-    "    pass"
+    "    name:str\n",
+    "    chinese:int\n",
+    "    english:int\n",
+    "    math:int"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "f41f2201",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stu1:Student = Student(name=\"robert\",\n",
+    "                       chinese=98,\n",
+    "                       english=75,\n",
+    "                       math=69)\n",
+    "\n",
+    "stu2:Student = Student(name=\"jenny\",\n",
+    "                       chinese=87,\n",
+    "                       english=92,\n",
+    "                       math=75)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "cca366d0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "__main__.Student"
+       "('robert', 98, 75, 69)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "stu1:Student = Student()\n",
-    "type(stu1)\n"
+    "stu1.name, stu1.chinese, stu1.english, stu1.math #tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "882ca4d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('jenny', 87, 92, 75)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stu2.name, stu2.chinese, stu2.english, stu2.math"
    ]
   }
  ],
