--- a/lesson9/lesson9_3.ipynb
+++ b/lesson9/lesson9_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "f33541ba",
    "metadata": {},
    "outputs": [],
@@ -16,14 +16,17 @@
     "    english:int\n",
     "    math:int\n",
     "\n",
-    "    @property\n",
+    "    @property #在使用時不要有括號\n",
     "    def sum(self): #def (裡面一定要寫self)\n",
-    "        return self.chinese + self.english + self.math"
+    "        return self.chinese + self.english + self.math\n",
+    "\n",
+    "    def average(self): #實體方法\n",
+    "        return round(self.sum / 3.0,ndigits=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "f41f2201",
    "metadata": {},
    "outputs": [],
@@ -41,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "cca366d0",
    "metadata": {},
    "outputs": [
@@ -50,7 +53,8 @@
      "output_type": "stream",
      "text": [
       "('robert', 100, 75, 69)\n",
-      "244\n"
+      "244\n",
+      "81.33\n"
      ]
     }
    ],
@@ -58,12 +62,13 @@
     "stu1.chinese = 100\n",
     "#stu1.sum = 300 一般的property只可以讀,不可以寫入(readonly)\n",
     "print((stu1.name, stu1.chinese, stu1.english, stu1.math)) \n",
-    "print(stu1.sum)"
+    "print(stu1.sum) #呼叫property\n",
+    "print(stu1.average()) #呼叫實體方法"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "882ca4d8",
    "metadata": {},
    "outputs": [
@@ -72,13 +77,15 @@
      "output_type": "stream",
      "text": [
       "('jenny', 87, 92, 75)\n",
-      "254\n"
+      "254\n",
+      "84.67\n"
      ]
     }
    ],
    "source": [
     "print((stu2.name, stu2.chinese, stu2.english, stu2.math))\n",
-    "print(stu2.sum)"
+    "print(stu2.sum)\n",
+    "print(stu2.average())"
    ]
   }
  ],
