--- a/lesson10/lesson10_1.ipynb
+++ b/lesson10/lesson10_1.ipynb
@@ -280,6 +280,93 @@
     "students_names:list[str]= random.sample(names, k=50)\n",
     "len(students_names)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "850e0962",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "de5e7e0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'姓名': '龐皓芳', '國文': 96, '英文': 74, '數學': 69},\n",
+       " {'姓名': '王人仰', '國文': 82, '英文': 61, '數學': 81},\n",
+       " {'姓名': '陳俊憲', '國文': 83, '英文': 84, '數學': 76},\n",
+       " {'姓名': '張慧君', '國文': 55, '英文': 84, '數學': 64},\n",
+       " {'姓名': '郭淑枝', '國文': 96, '英文': 94, '數學': 81},\n",
+       " {'姓名': '溫法堯', '國文': 74, '英文': 74, '數學': 58},\n",
+       " {'姓名': '鞠冠宇', '國文': 53, '英文': 62, '數學': 80},\n",
+       " {'姓名': '盧文啟', '國文': 69, '英文': 64, '數學': 98},\n",
+       " {'姓名': '黃淑芬', '國文': 59, '英文': 85, '數學': 80},\n",
+       " {'姓名': '蔡偉成', '國文': 55, '英文': 76, '數學': 89},\n",
+       " {'姓名': '林佳人', '國文': 98, '英文': 72, '數學': 71},\n",
+       " {'姓名': '柯宜臻', '國文': 95, '英文': 70, '數學': 51},\n",
+       " {'姓名': '林怡偉', '國文': 70, '英文': 89, '數學': 70},\n",
+       " {'姓名': '魏秋萍', '國文': 90, '英文': 52, '數學': 98},\n",
+       " {'姓名': '尚偉倫', '國文': 78, '英文': 61, '數學': 52},\n",
+       " {'姓名': '傅佳琳', '國文': 77, '英文': 67, '數學': 57},\n",
+       " {'姓名': '陳筱涵', '國文': 51, '英文': 87, '數學': 79},\n",
+       " {'姓名': '吳淑惠', '國文': 66, '英文': 71, '數學': 76},\n",
+       " {'姓名': '柯韋成', '國文': 71, '英文': 94, '數學': 91},\n",
+       " {'姓名': '洪阿惠', '國文': 56, '英文': 51, '數學': 85},\n",
+       " {'姓名': '余丞苓', '國文': 75, '英文': 73, '數學': 50},\n",
+       " {'姓名': '翁鈺婷', '國文': 51, '英文': 97, '數學': 96},\n",
+       " {'姓名': '林群清', '國文': 85, '英文': 64, '數學': 77},\n",
+       " {'姓名': '簡國瑋', '國文': 93, '英文': 70, '數學': 66},\n",
+       " {'姓名': '郭致恬', '國文': 72, '英文': 96, '數學': 80},\n",
+       " {'姓名': '林益妏', '國文': 56, '英文': 81, '數學': 97},\n",
+       " {'姓名': '胡姿婷', '國文': 85, '英文': 71, '數學': 84},\n",
+       " {'姓名': '陳孝邦', '國文': 77, '英文': 96, '數學': 51},\n",
+       " {'姓名': '蔡至剛', '國文': 89, '英文': 79, '數學': 65},\n",
+       " {'姓名': '王良斌', '國文': 56, '英文': 52, '數學': 82},\n",
+       " {'姓名': '李蓉瑞', '國文': 81, '英文': 59, '數學': 83},\n",
+       " {'姓名': '戚亨', '國文': 88, '英文': 88, '數學': 55},\n",
+       " {'姓名': '楊少亮', '國文': 85, '英文': 69, '數學': 68},\n",
+       " {'姓名': '劉昀天', '國文': 93, '英文': 82, '數學': 79},\n",
+       " {'姓名': '葉志峰', '國文': 85, '英文': 84, '數學': 95},\n",
+       " {'姓名': '李政白', '國文': 96, '英文': 69, '數學': 93},\n",
+       " {'姓名': '趙家豪', '國文': 60, '英文': 64, '數學': 77},\n",
+       " {'姓名': '楊易政', '國文': 98, '英文': 90, '數學': 53},\n",
+       " {'姓名': '陳逸凡', '國文': 75, '英文': 76, '數學': 55},\n",
+       " {'姓名': '陳向愛', '國文': 81, '英文': 94, '數學': 56},\n",
+       " {'姓名': '金宜芳', '國文': 87, '英文': 100, '數學': 63},\n",
+       " {'姓名': '謝貞妃', '國文': 80, '英文': 54, '數學': 80},\n",
+       " {'姓名': '黃詩妃', '國文': 96, '英文': 55, '數學': 52},\n",
+       " {'姓名': '楊建安', '國文': 82, '英文': 80, '數學': 83},\n",
+       " {'姓名': '鄧淑娟', '國文': 81, '英文': 69, '數學': 89},\n",
+       " {'姓名': '羅佩樺', '國文': 95, '英文': 88, '數學': 100},\n",
+       " {'姓名': '周琬婷', '國文': 74, '英文': 76, '數學': 65},\n",
+       " {'姓名': '周怡啟', '國文': 91, '英文': 90, '數學': 95},\n",
+       " {'姓名': '楊韋廷', '國文': 51, '英文': 69, '數學': 59},\n",
+       " {'姓名': '王明昇', '國文': 97, '英文': 57, '數學': 70}]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random\n",
+    "students_names:list[str]= random.sample(names, k=50)\n",
+    "students = []\n",
+    "for name in students_names:\n",
+    "    stu_dict = dict()\n",
+    "    stu_dict[\"姓名\"] = name\n",
+    "    stu_dict[\"國文\"] = random.randint(50, 100)\n",
+    "    stu_dict[\"英文\"] = random.randint(50, 100)\n",
+    "    stu_dict[\"數學\"] = random.randint(50, 100)\n",
+    "    students.append(stu_dict)\n",
+    "\n",
+    "students\n"
+   ]
   }
  ],
  "metadata": {
