--- a/lesson10/lesson10_1.ipynb
+++ b/lesson10/lesson10_1.ipynb
@@ -289,70 +289,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "de5e7e0f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'姓名': '龐皓芳', '國文': 96, '英文': 74, '數學': 69},\n",
-       " {'姓名': '王人仰', '國文': 82, '英文': 61, '數學': 81},\n",
-       " {'姓名': '陳俊憲', '國文': 83, '英文': 84, '數學': 76},\n",
-       " {'姓名': '張慧君', '國文': 55, '英文': 84, '數學': 64},\n",
-       " {'姓名': '郭淑枝', '國文': 96, '英文': 94, '數學': 81},\n",
-       " {'姓名': '溫法堯', '國文': 74, '英文': 74, '數學': 58},\n",
-       " {'姓名': '鞠冠宇', '國文': 53, '英文': 62, '數學': 80},\n",
-       " {'姓名': '盧文啟', '國文': 69, '英文': 64, '數學': 98},\n",
-       " {'姓名': '黃淑芬', '國文': 59, '英文': 85, '數學': 80},\n",
-       " {'姓名': '蔡偉成', '國文': 55, '英文': 76, '數學': 89},\n",
-       " {'姓名': '林佳人', '國文': 98, '英文': 72, '數學': 71},\n",
-       " {'姓名': '柯宜臻', '國文': 95, '英文': 70, '數學': 51},\n",
-       " {'姓名': '林怡偉', '國文': 70, '英文': 89, '數學': 70},\n",
-       " {'姓名': '魏秋萍', '國文': 90, '英文': 52, '數學': 98},\n",
-       " {'姓名': '尚偉倫', '國文': 78, '英文': 61, '數學': 52},\n",
-       " {'姓名': '傅佳琳', '國文': 77, '英文': 67, '數學': 57},\n",
-       " {'姓名': '陳筱涵', '國文': 51, '英文': 87, '數學': 79},\n",
-       " {'姓名': '吳淑惠', '國文': 66, '英文': 71, '數學': 76},\n",
-       " {'姓名': '柯韋成', '國文': 71, '英文': 94, '數學': 91},\n",
-       " {'姓名': '洪阿惠', '國文': 56, '英文': 51, '數學': 85},\n",
-       " {'姓名': '余丞苓', '國文': 75, '英文': 73, '數學': 50},\n",
-       " {'姓名': '翁鈺婷', '國文': 51, '英文': 97, '數學': 96},\n",
-       " {'姓名': '林群清', '國文': 85, '英文': 64, '數學': 77},\n",
-       " {'姓名': '簡國瑋', '國文': 93, '英文': 70, '數學': 66},\n",
-       " {'姓名': '郭致恬', '國文': 72, '英文': 96, '數學': 80},\n",
-       " {'姓名': '林益妏', '國文': 56, '英文': 81, '數學': 97},\n",
-       " {'姓名': '胡姿婷', '國文': 85, '英文': 71, '數學': 84},\n",
-       " {'姓名': '陳孝邦', '國文': 77, '英文': 96, '數學': 51},\n",
-       " {'姓名': '蔡至剛', '國文': 89, '英文': 79, '數學': 65},\n",
-       " {'姓名': '王良斌', '國文': 56, '英文': 52, '數學': 82},\n",
-       " {'姓名': '李蓉瑞', '國文': 81, '英文': 59, '數學': 83},\n",
-       " {'姓名': '戚亨', '國文': 88, '英文': 88, '數學': 55},\n",
-       " {'姓名': '楊少亮', '國文': 85, '英文': 69, '數學': 68},\n",
-       " {'姓名': '劉昀天', '國文': 93, '英文': 82, '數學': 79},\n",
-       " {'姓名': '葉志峰', '國文': 85, '英文': 84, '數學': 95},\n",
-       " {'姓名': '李政白', '國文': 96, '英文': 69, '數學': 93},\n",
-       " {'姓名': '趙家豪', '國文': 60, '英文': 64, '數學': 77},\n",
-       " {'姓名': '楊易政', '國文': 98, '英文': 90, '數學': 53},\n",
-       " {'姓名': '陳逸凡', '國文': 75, '英文': 76, '數學': 55},\n",
-       " {'姓名': '陳向愛', '國文': 81, '英文': 94, '數學': 56},\n",
-       " {'姓名': '金宜芳', '國文': 87, '英文': 100, '數學': 63},\n",
-       " {'姓名': '謝貞妃', '國文': 80, '英文': 54, '數學': 80},\n",
-       " {'姓名': '黃詩妃', '國文': 96, '英文': 55, '數學': 52},\n",
-       " {'姓名': '楊建安', '國文': 82, '英文': 80, '數學': 83},\n",
-       " {'姓名': '鄧淑娟', '國文': 81, '英文': 69, '數學': 89},\n",
-       " {'姓名': '羅佩樺', '國文': 95, '英文': 88, '數學': 100},\n",
-       " {'姓名': '周琬婷', '國文': 74, '英文': 76, '數學': 65},\n",
-       " {'姓名': '周怡啟', '國文': 91, '英文': 90, '數學': 95},\n",
-       " {'姓名': '楊韋廷', '國文': 51, '英文': 69, '數學': 59},\n",
-       " {'姓名': '王明昇', '國文': 97, '英文': 57, '數學': 70}]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "students_names:list[str]= random.sample(names, k=50)\n",
@@ -366,6 +306,118 @@
     "    students.append(stu_dict)\n",
     "\n",
     "students\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4b2a1cf",
+   "metadata": {},
+   "source": [
+    "如何查出list的元素數量?\n",
+    "要查出 Python 中 list 的元素數量，最常用且簡單的方法是使用內建函數 len()。\n",
+    "\n",
+    "my_list = [1, 2, 3, 4, 5]\n",
+    "count = len(my_list)\n",
+    "print(count)  # 輸出 5\n",
+    "len(list) 會回傳列表中元素的總數量[1][3][8]。\n",
+    "如果你想統計列表中某個特定元素出現的次數，可以使用 list.count(element)：\n",
+    "\n",
+    "my_list = ['a', 'b', 'a', 'c', 'a']\n",
+    "count_a = my_list.count('a')\n",
+    "print(count_a)  # 輸出 3\n",
+    "此外，如果想要統計列表中每個元素出現的次數，可以使用標準庫 collections 模組的 Counter 類：\n",
+    "\n",
+    "from collections import Counter\n",
+    "\n",
+    "my_list = ['a', 'b', 'a', 'c', 'a', 'b']\n",
+    "counter = Counter(my_list)\n",
+    "print(counter)  # 輸出 Counter({'a': 3, 'b': 2, 'c': 1})\n",
+    "總結：\n",
+    "\n",
+    "取得列表總元素數量：len(list)\n",
+    "取得特定元素出現次數：list.count(element)\n",
+    "取得所有元素出現次數統計：collections.Counter(list)\n",
+    "這些方法能滿足大部分對列表元素數量的查詢需求[1][2][3][4][5].\n",
+    "\n",
+    "import random\n",
+    "students_names:list[str]= random.sample(names,k=50)\n",
+    "students = []\n",
+    "for name in students_names:\n",
+    "    stu_dict = dict()\n",
+    "    stu_dict[\"姓名\"] = name\n",
+    "    stu_dict[\"國文\"] = random.randint(50, 100)\n",
+    "    stu_dict[\"英文\"] = random.randint(50, 100)\n",
+    "    stu_dict[\"數學\"] = random.randint(50, 100)\n",
+    "    students.append(stu_dict)\n",
+    "    \n",
+    "students    \n",
+    "\n",
+    "[{'姓名': '錢欣潔', '國文': 100, '英文': 77, '數學': 59},\n",
+    " {'姓名': '許芳如', '國文': 98, '英文': 74, '數學': 99},\n",
+    " {'姓名': '陳怡伶', '國文': 54, '英文': 67, '數學': 79}]\n",
+    "我的list內有dict,如何儲存為students.csv\n",
+    "\n",
+    "你可以使用 Python 內建的 csv 模組中的 csv.DictWriter，將你的 list of dict 寫入 CSV 檔案。以下是範例程式碼，示範如何把你的資料儲存成 students.csv：\n",
+    "\n",
+    "import csv\n",
+    "\n",
+    "students = [\n",
+    "    {'姓名': '錢欣潔', '國文': 100, '英文': 77, '數學': 59},\n",
+    "    {'姓名': '許芳如', '國文': 98, '英文': 74, '數學': 99},\n",
+    "    {'姓名': '陳怡伶', '國文': 54, '英文': 67, '數學': 79}\n",
+    "]\n",
+    "\n",
+    "# 取得欄位名稱（CSV 標題）\n",
+    "fieldnames = students[0].keys()\n",
+    "\n",
+    "with open('students.csv', mode='w', encoding='utf-8', newline='') as file:\n",
+    "    writer = csv.DictWriter(file, fieldnames=fieldnames)\n",
+    "    writer.writeheader()       # 寫入欄位名稱\n",
+    "    writer.writerows(students) # 寫入多筆資料列\n",
+    "\n",
+    "print(\"students.csv 已成功儲存\")\n",
+    "說明：\n",
+    "\n",
+    "fieldnames 取得字典的鍵作為 CSV 欄位標題。\n",
+    "csv.DictWriter 適合寫入字典格式資料，每個字典代表一列。\n",
+    "newline='' 用來避免在 Windows 平台寫入 CSV 時產生空行。\n",
+    "指定 encoding='utf-8' 可避免中文亂碼。\n",
+    "執行後，會產生一個 students.csv，內容類似：\n",
+    "\n",
+    "姓名,國文,英文,數學\n",
+    "錢欣潔,100,77,59\n",
+    "許芳如,98,74,99\n",
+    "陳怡伶,54,67,79\n",
+    "這是將 list of dict 儲存成 CSV 的標準且簡潔做法[1][5][8]。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e2e2b7ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "students.csv已經存檔\n"
+     ]
+    }
+   ],
+   "source": [
+    "#儲存檔案為csv格式\n",
+    "\n",
+    "import csv\n",
+    "from csv import DictWriter\n",
+    "\n",
+    "field_names:list[str] = list(students[0].keys())\n",
+    "with open(\"students.csv\",mode='w',encoding='utf-8',newline='') as file:\n",
+    "    writer:DictWriter = csv.DictWriter(file,field_names)\n",
+    "    writer.writeheader()\n",
+    "    writer.writerows(students)\n",
+    "\n",
+    "print(\"students.csv已經存檔\")"
    ]
   }
  ],
