pip 套件管理程式查詢

--- a/lesson11/lesson11_1.ipynb
+++ b/lesson11/lesson11_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c59ee63a",
    "metadata": {},
    "outputs": [
@@ -25018,11 +25018,48 @@
     "from pprint import pprint\n",
     "\n",
     "file_name:str = \"練習/aqx_p_488.csv\"\n",
-    "with open(file_name, newline='', encoding='utf-8') as csvfile:\n",
+    "with open(file_name, newline='', encoding='utf-8-sig') as csvfile:\n",
     "    reader = csv.DictReader(csvfile)  # 使用 DictReader 讀取成字典格式\n",
     "    sites = list(reader)\n",
     "    \n",
     "pprint(sites)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ab0c99ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pip 24.2 from /opt/conda/lib/python3.12/site-packages/pip (python 3.12)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip --version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a7040354",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pip 24.2 from /opt/conda/lib/python3.12/site-packages/pip (python 3.12)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip --version"
    ]
   }
  ],
