--- a/lesson11/lesson11_1.ipynb
+++ b/lesson11/lesson11_1.ipynb
@@ -25065,7 +25065,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "myenv1",
    "language": "python",
    "name": "python3"
   },
@@ -25079,7 +25079,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
