--- a/lesson11/lesson11_2.ipynb
+++ b/lesson11/lesson11_2.ipynb
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2a41e03e",
    "metadata": {},
    "outputs": [
@@ -1302,6 +1302,7 @@
    ],
    "source": [
     "from pprint import pprint\n",
+    "print(type(response.text))\n",
     "pprint(response.text,compact=True,width=300,depth=True)"
    ]
   }
