--- a/lesson13/lesson13_1.ipynb
+++ b/lesson13/lesson13_1.ipynb
@@ -191,6 +191,37 @@
     "axes3.set_title(\"圖表3\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "8f57ea18",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(['國文', '英文', '數學', '歷史', '探索'], [78, 80, 92, 75, 85])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib as mpl\n",
+    "from matplotlib.font_manager import fontManager\n",
+    "\n",
+    "fontManager.addfont(\"ChineseFont.ttf\")\n",
+    "mpl.rc('font', family=\"ChineseFont\")\n",
+    "\n",
+    "student1 = {'國文':78,'英文':80,'數學':92,'歷史':75,'探索':85}\n",
+    "subjects = list(student1.keys())\n",
+    "stu1_values = list(student1.values())\n",
+    "subjects, stu1_values"
+   ]
   }
  ],
  "metadata": {
