numpy.ndarray - 陣列運算 - 統計 - 科學運算

--- a/lesson14/lesson14_4.ipynb
+++ b/lesson14/lesson14_4.ipynb
@@ -50,14 +50,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "eada0c26",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#驗證re是否安裝成功驗證re是否安裝成功\n",
+    "#驗證re是否安裝成功驗證requirements.txt是否安裝成功\n",
+    "#終端機執行安裝pip install -r requirements.txt\n",
     "import numpy as np\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17e6d3b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 7,  9, 11, 13, 15])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#numpy.ndarray - 陣列運算 - 統計 - 科學運算\n",
+    "n1 = np.array([2,3,4,5,6])\n",
+    "n2 = np.array([5,6,7,8,9])\n",
+    "\n",
+    "n3 = n1 + n2\n",
+    "n3"
    ]
   }
  ],
