基本索引和分割

--- a/lesson15/lesson15_1.ipynb
+++ b/lesson15/lesson15_1.ipynb
@@ -86,6 +86,122 @@
    "source": [
     "%time for _ in range(10): my_array2 = my_array * 2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ad386beb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#tuple,1個元素的表示法\n",
+    "(4, 5)\n",
+    "type((4,))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3e567d3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4,)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#一維陣列\n",
+    "np.array(range(4)).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b70b9c95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### 50個學生,每個學生有5個分數,每個分數50~100\n",
+    "np.random.seed(42)\n",
+    "scores = np.random.randint(50, 101, (50,5))\n",
+    "scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c649a2a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('int32')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#ndarray常用的實體屬性\n",
+    "scores.ndim\n",
+    "scores.shape\n",
+    "scores.size\n",
+    "scores.dtype"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78716c7c",
+   "metadata": {},
+   "source": [
+    "基本索引和分割\n",
+    "ndarray[index]\n",
+    "ndarray[start:end:step]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c877699",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int32(57)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#2維\n",
+    "scores[0][4] #類似list的操作\n",
+    "scores[0, 4] #ndarry的slice的操作法"
+   ]
   }
  ],
  "metadata": {
