--- a/lesson15/lesson15_1.ipynb
+++ b/lesson15/lesson15_1.ipynb
@@ -175,7 +175,7 @@
    "id": "78716c7c",
    "metadata": {},
    "source": [
-    "基本索引和分割\n",
+    "基本索引[index]和分割[slicing]\n",
     "ndarray[index]\n",
     "ndarray[start:end:step]"
    ]
@@ -201,6 +201,30 @@
     "#2維\n",
     "scores[0][4] #類似list的操作\n",
     "scores[0, 4] #ndarry的slice的操作法"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f96c5e92",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[88, 78, 64, 92, 57]], dtype=int32)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### 取得第1位學生的分數\n",
+    "scores [0] #shape(5,)\n",
+    "scores [0,:] #shape(5,0)\n",
+    "scores [0:1,:] #shape(1,5)"
    ]
   }
  ],
