--- a/lesson15/lesson15_1.ipynb
+++ b/lesson15/lesson15_1.ipynb
@@ -226,6 +226,55 @@
     "scores [0,:] #shape(5,0)\n",
     "scores [0:1,:] #shape(1,5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "491fc54b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[88, 78, 64, 92, 57],\n",
+       "       [70, 88, 68, 72, 60]], dtype=int32)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### 取得第1,2位學生的分數\n",
+    "scores [:2]\n",
+    "scores [:2,:]\n",
+    "scores [(0,1),:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a77d8b27",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[88, 78, 64, 92, 57],\n",
+       "       [70, 88, 68, 72, 60],\n",
+       "       [79, 87, 51, 70, 82]], dtype=int32)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### 取得第1,2,5位學生的分數\n",
+    "scores [(0,1,4),:]"
+   ]
   }
  ],
  "metadata": {
