--- a/lesson15/lesson15_1.ipynb
+++ b/lesson15/lesson15_1.ipynb
@@ -275,6 +275,200 @@
     "### 取得第1,2,5位學生的分數\n",
     "scores [(0,1,4),:]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "077b3211",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 88],\n",
+       "       [ 70],\n",
+       "       [ 60],\n",
+       "       [ 52],\n",
+       "       [ 79],\n",
+       "       [ 61],\n",
+       "       [ 76],\n",
+       "       [ 96],\n",
+       "       [100],\n",
+       "       [ 67],\n",
+       "       [ 58],\n",
+       "       [ 96],\n",
+       "       [ 84],\n",
+       "       [ 89],\n",
+       "       [ 53],\n",
+       "       [ 83],\n",
+       "       [ 97],\n",
+       "       [ 89],\n",
+       "       [ 96],\n",
+       "       [ 90],\n",
+       "       [ 74],\n",
+       "       [ 93],\n",
+       "       [ 66],\n",
+       "       [ 54],\n",
+       "       [ 56],\n",
+       "       [ 82],\n",
+       "       [ 84],\n",
+       "       [ 84],\n",
+       "       [ 63],\n",
+       "       [ 63],\n",
+       "       [ 64],\n",
+       "       [ 81],\n",
+       "       [ 79],\n",
+       "       [ 64],\n",
+       "       [ 81],\n",
+       "       [ 51],\n",
+       "       [ 77],\n",
+       "       [ 60],\n",
+       "       [ 50],\n",
+       "       [ 88],\n",
+       "       [ 86],\n",
+       "       [ 73],\n",
+       "       [ 90],\n",
+       "       [ 51],\n",
+       "       [ 66],\n",
+       "       [ 72],\n",
+       "       [ 68],\n",
+       "       [ 55],\n",
+       "       [ 87],\n",
+       "       [ 71]], dtype=int32)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### 取得第1科的所有分數\n",
+    "scores [:,0] #(50,)\n",
+    "scores [:,0:1] #(1,50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f9ec2f2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 88,  78],\n",
+       "       [ 70,  88],\n",
+       "       [ 60,  73],\n",
+       "       [ 52,  71],\n",
+       "       [ 79,  87],\n",
+       "       [ 61,  71],\n",
+       "       [ 76,  91],\n",
+       "       [ 96, 100],\n",
+       "       [100,  56],\n",
+       "       [ 67,  53],\n",
+       "       [ 58,  75],\n",
+       "       [ 96,  56],\n",
+       "       [ 84,  63],\n",
+       "       [ 89,  53],\n",
+       "       [ 53,  78],\n",
+       "       [ 83,  59],\n",
+       "       [ 97,  64],\n",
+       "       [ 89,  70],\n",
+       "       [ 96,  73],\n",
+       "       [ 90,  78],\n",
+       "       [ 74,  56],\n",
+       "       [ 93,  57],\n",
+       "       [ 66,  57],\n",
+       "       [ 54,  91],\n",
+       "       [ 56,  58],\n",
+       "       [ 82,  97],\n",
+       "       [ 84,  93],\n",
+       "       [ 84,  50],\n",
+       "       [ 63,  52],\n",
+       "       [ 63,  88],\n",
+       "       [ 64,  75],\n",
+       "       [ 81,  88],\n",
+       "       [ 79,  86],\n",
+       "       [ 64,  92],\n",
+       "       [ 81,  56],\n",
+       "       [ 51,  91],\n",
+       "       [ 77,  93],\n",
+       "       [ 60,  77],\n",
+       "       [ 50,  76],\n",
+       "       [ 88,  55],\n",
+       "       [ 86,  82],\n",
+       "       [ 73,  64],\n",
+       "       [ 90,  98],\n",
+       "       [ 51,  52],\n",
+       "       [ 66,  98],\n",
+       "       [ 72,  86],\n",
+       "       [ 68,  51],\n",
+       "       [ 55,  81],\n",
+       "       [ 87,  73],\n",
+       "       [ 71,  60]], dtype=int32)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### 取得第1,2科的所有分數\n",
+    "scores [:,0:2] #(50,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "edbefe43",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 64,  92,  57],\n",
+       "       [ 68,  72,  60],\n",
+       "       [ 85,  89,  73],\n",
+       "       [ 51,  73,  93],\n",
+       "       [ 51,  70,  82],\n",
+       "       [ 93,  74,  98],\n",
+       "       [ 77,  65,  64],\n",
+       "       [ 93,  52,  86],\n",
+       "       [ 70,  58,  88],\n",
+       "       [ 74,  63,  99],\n",
+       "       [ 51,  69,  77],\n",
+       "       [ 93,  57,  96],\n",
+       "       [ 66,  85,  99],\n",
+       "       [ 51,  55,  91],\n",
+       "       [ 67,  75,  93],\n",
+       "       [ 85,  63,  80],\n",
+       "       [ 57,  63,  72],\n",
+       "       [ 65,  94,  67],\n",
+       "       [ 75,  74,  94],\n",
+       "       [ 64,  94,  50],\n",
+       "       [ 58,  73,  50],\n",
+       "       [ 73,  60, 100],\n",
+       "       [ 84,  84,  82],\n",
+       "       [ 88,  90,  77],\n",
+       "       [ 57,  61,  83],\n",
+       "       [ 72,  73,  86],\n",
+       "       [ 89,  71,  76],\n",
+       "       [ 84,  86,  96],\n",
+       "       [ 50,  54,  75],\n",
+       "       [ 76,  58,  64]], dtype=int32)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### 取得前30位學生的最後3科分數\n",
+    "scores [:30,-3:] #(30,3)"
+   ]
   }
  ],
  "metadata": {
