#iloc[列,欄],先選列再選欄

--- a/lesson16/lesson16_1.ipynb
+++ b/lesson16/lesson16_1.ipynb
@@ -944,6 +944,350 @@
     "\n",
     "df1[['國文','英文']]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36c01df9",
+   "metadata": {},
+   "source": [
+    "### 列的選取\n",
+    "- df.iloc[](是基於整數位置索引)\n",
+    "- df.iloc[(依標籤選取欄位)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "8db8dd9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "國文    88\n",
+       "英文    78\n",
+       "數學    64\n",
+       "歷史    92\n",
+       "生物    57\n",
+       "Name: 學號1, dtype: int32"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "df1.loc['學號1']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c05b7cb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>國文</th>\n",
+       "      <th>英文</th>\n",
+       "      <th>數學</th>\n",
+       "      <th>歷史</th>\n",
+       "      <th>生物</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>學號1</th>\n",
+       "      <td>88</td>\n",
+       "      <td>78</td>\n",
+       "      <td>64</td>\n",
+       "      <td>92</td>\n",
+       "      <td>57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>學號25</th>\n",
+       "      <td>56</td>\n",
+       "      <td>58</td>\n",
+       "      <td>57</td>\n",
+       "      <td>61</td>\n",
+       "      <td>83</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      國文  英文  數學  歷史  生物\n",
+       "學號1   88  78  64  92  57\n",
+       "學號25  56  58  57  61  83"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.loc[['學號1','學號25']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0f737b41",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>國文</th>\n",
+       "      <th>英文</th>\n",
+       "      <th>數學</th>\n",
+       "      <th>歷史</th>\n",
+       "      <th>生物</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>學號1</th>\n",
+       "      <td>88</td>\n",
+       "      <td>78</td>\n",
+       "      <td>64</td>\n",
+       "      <td>92</td>\n",
+       "      <td>57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>學號25</th>\n",
+       "      <td>56</td>\n",
+       "      <td>58</td>\n",
+       "      <td>57</td>\n",
+       "      <td>61</td>\n",
+       "      <td>83</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      國文  英文  數學  歷史  生物\n",
+       "學號1   88  78  64  92  57\n",
+       "學號25  56  58  57  61  83"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#iloc選取\n",
+    "df1.iloc[[0,24]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "422e2783",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>國文</th>\n",
+       "      <th>英文</th>\n",
+       "      <th>數學</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>學號1</th>\n",
+       "      <td>88</td>\n",
+       "      <td>78</td>\n",
+       "      <td>64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>學號2</th>\n",
+       "      <td>70</td>\n",
+       "      <td>88</td>\n",
+       "      <td>68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>學號3</th>\n",
+       "      <td>60</td>\n",
+       "      <td>73</td>\n",
+       "      <td>85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>學號4</th>\n",
+       "      <td>52</td>\n",
+       "      <td>71</td>\n",
+       "      <td>51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>學號5</th>\n",
+       "      <td>79</td>\n",
+       "      <td>87</td>\n",
+       "      <td>51</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     國文  英文  數學\n",
+       "學號1  88  78  64\n",
+       "學號2  70  88  68\n",
+       "學號3  60  73  85\n",
+       "學號4  52  71  51\n",
+       "學號5  79  87  51"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#iloc[列,欄],先選列再選欄\n",
+    "df1.iloc[:5,[0,1,2]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "3f69ecba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>國文</th>\n",
+       "      <th>英文</th>\n",
+       "      <th>數學</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>學號1</th>\n",
+       "      <td>88</td>\n",
+       "      <td>78</td>\n",
+       "      <td>64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>學號2</th>\n",
+       "      <td>70</td>\n",
+       "      <td>88</td>\n",
+       "      <td>68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>學號3</th>\n",
+       "      <td>60</td>\n",
+       "      <td>73</td>\n",
+       "      <td>85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>學號4</th>\n",
+       "      <td>52</td>\n",
+       "      <td>71</td>\n",
+       "      <td>51</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     國文  英文  數學\n",
+       "學號1  88  78  64\n",
+       "學號2  70  88  68\n",
+       "學號3  60  73  85\n",
+       "學號4  52  71  51"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#iloc[列,欄],先選列再選欄\n",
+    "df1.iloc[:4,:3]"
+   ]
   }
  ],
  "metadata": {
