--- a/lesson19/lesson19_3.ipynb
+++ b/lesson19/lesson19_3.ipynb
@@ -328,6 +328,52 @@
     "data = yf.download(ticker, start=start_date, end=end_date, interval='1d',auto_adjust=False)\n",
     "data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ce2f036f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Date\n",
+       "2024-01-02    582.770691\n",
+       "2024-01-03    568.029541\n",
+       "2024-01-04    569.994934\n",
+       "2024-01-05    566.064026\n",
+       "2024-01-08    572.943176\n",
+       "                 ...    \n",
+       "2024-05-27    857.997498\n",
+       "2024-05-28    854.048096\n",
+       "2024-05-29    846.149414\n",
+       "2024-05-30    827.390015\n",
+       "2024-05-31    810.605225\n",
+       "Name: 2330.TW, Length: 98, dtype: float64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import yfinance as yf\n",
+    "ticker = '2330.TW'  # 台灣50 ETF\n",
+    "start_date = '2024-01-01'\n",
+    "end_date = '2024-06-01'\n",
+    "\n",
+    "data = yf.download(ticker, start=start_date, end=end_date, interval='1d',auto_adjust=False)\n",
+    "data['Adj Close']['2330.TW']"
+   ]
   }
  ],
  "metadata": {
