--- a/lesson20/lesson20_3.ipynb
+++ b/lesson20/lesson20_3.ipynb
@@ -1062,6 +1062,211 @@
    "source": [
     "agg_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "a60a2982",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "區域   租借  統計 \n",
+       "三峽區  數量  加總     1540.000000\n",
+       "         平均       22.318841\n",
+       "         中間數      20.000000\n",
+       "         最多       63.000000\n",
+       "         最少       10.000000\n",
+       "                   ...     \n",
+       "金山區  可還  加總      125.000000\n",
+       "         平均       17.857143\n",
+       "         中間數      15.000000\n",
+       "         最多       27.000000\n",
+       "         最少        9.000000\n",
+       "Length: 315, dtype: float64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agg_df.columns.names = [\"租借\",\"統計\"]\n",
+    "s1 = agg_df.stack(level=['租借','統計'],future_stack=True)\n",
+    "s1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "bf8550d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>統計</th>\n",
+       "      <th>加總</th>\n",
+       "      <th>平均</th>\n",
+       "      <th>中間數</th>\n",
+       "      <th>最多</th>\n",
+       "      <th>最少</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>區域</th>\n",
+       "      <th>租借</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">三峽區</th>\n",
+       "      <th>數量</th>\n",
+       "      <td>1540.0</td>\n",
+       "      <td>22.318841</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>可借</th>\n",
+       "      <td>687.0</td>\n",
+       "      <td>9.956522</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>可還</th>\n",
+       "      <td>852.0</td>\n",
+       "      <td>12.347826</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">三芝區</th>\n",
+       "      <th>數量</th>\n",
+       "      <td>170.0</td>\n",
+       "      <td>21.250000</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>14.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>可借</th>\n",
+       "      <td>43.0</td>\n",
+       "      <td>5.375000</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">貢寮區</th>\n",
+       "      <th>可借</th>\n",
+       "      <td>22.0</td>\n",
+       "      <td>7.333333</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>可還</th>\n",
+       "      <td>38.0</td>\n",
+       "      <td>12.666667</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">金山區</th>\n",
+       "      <th>數量</th>\n",
+       "      <td>163.0</td>\n",
+       "      <td>23.285714</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>15.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>可借</th>\n",
+       "      <td>38.0</td>\n",
+       "      <td>5.428571</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>可還</th>\n",
+       "      <td>125.0</td>\n",
+       "      <td>17.857143</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>63 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "統計          加總         平均   中間數    最多    最少\n",
+       "區域  租借                                     \n",
+       "三峽區 數量  1540.0  22.318841  20.0  63.0  10.0\n",
+       "    可借   687.0   9.956522   9.0  26.0   0.0\n",
+       "    可還   852.0  12.347826  10.0  40.0   3.0\n",
+       "三芝區 數量   170.0  21.250000  16.0  48.0  14.0\n",
+       "    可借    43.0   5.375000   5.0  11.0   2.0\n",
+       "...        ...        ...   ...   ...   ...\n",
+       "貢寮區 可借    22.0   7.333333   5.0  16.0   1.0\n",
+       "    可還    38.0  12.666667  15.0  19.0   4.0\n",
+       "金山區 數量   163.0  23.285714  24.0  30.0  15.0\n",
+       "    可借    38.0   5.428571   5.0   9.0   3.0\n",
+       "    可還   125.0  17.857143  15.0  27.0   9.0\n",
+       "\n",
+       "[63 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s1.unstack(level=\"統計\")"
+   ]
   }
  ],
  "metadata": {
