--- a/lesson20/lesson20_4.ipynb
+++ b/lesson20/lesson20_4.ipynb
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "cd76e9ba",
    "metadata": {},
    "outputs": [
@@ -481,12 +481,13 @@
        "12    181.000000  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#groupby 月份\n",
     "price_df2 = price_df1.groupby(price_df1.index.month).agg([(\"平均\",\"mean\"),(\"最高\",\"max\"),(\"最低\",\"min\")])\n",
     "price_df2"
    ]
